KuppiksenKunkku viimeiset bugit korjattu