@@ -10,7 +10,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import k25.kaatokerho.domain.GP;
 import k25.kaatokerho.domain.Keilaaja;
-import k25.kaatokerho.domain.KeilaajaKausi;
 import k25.kaatokerho.domain.KeilaajaKausiRepository;
 import k25.kaatokerho.domain.KuppiksenKunkku;
 import k25.kaatokerho.domain.KuppiksenKunkkuRepository;
@@ -21,11 +20,13 @@ import k25.kaatokerho.domain.TulosRepository;
  * Kuppiksen Kunkku – palvelu
  *
  * Säännöt (tiivistettynä):
- * - Puolustaja = edellisen GP:n KK-ottelun voittaja.
+ * - Puolustaja = edellisen GP:n KK-ottelun voittaja (fallback: edellisen KK:n puolustaja).
  * - Ottelu pelataan AINA. Jos alkuperäinen puolustaja on poissa tai vyö on unohtunut,
  *   puolustusoikeus siirtyy yhden pykälän alas: haastajalistan #1 -> puolustaja,
  *   ja seuraava paikalla oleva -> haastaja.
- * - Haastajalista: paras sarja DESC, huonompi sarja DESC, keilaajaId ASC (determinismi).
+ * - Haastajalista GPₙ:lle rakennetaan GPₙ₋₁:n tuloksista (eka GP käyttää omaa),
+ *   järjestys: paras DESC, huonompi DESC, keilaajaId ASC (determinismi),
+ *   JA listalta poistetaan puolustaja (UI:lle selkeä “mandaatti-haastaja”).
  * - Täydellinen tasapeli ottelussa -> IllegalStateException -> UI valitsee voittajan.
  * - Voittajalle +1 kausipiste.
  */
@@ -34,241 +35,241 @@ public class KuppiksenKunkkuService {
 
     private static final Logger log = LoggerFactory.getLogger(KuppiksenKunkkuService.class);
 
-    private final KuppiksenKunkkuRepository kuppiksenKunkkuRepository;
-    private final TulosRepository tulosRepository;
-    private final KeilaajaKausiRepository keilaajaKausiRepository;
+    private final KuppiksenKunkkuRepository kkRepo;
+    private final TulosRepository tulosRepo;
+    private final KeilaajaKausiRepository kkSeasonRepo;
 
-    // Thymeleaf / diagnostiikka
-    private final List<KuppiksenKunkku> kaudenKaksintaistelut = new ArrayList<>();
-    private final Map<Long, List<Keilaaja>> haastajalistatByGpId = new HashMap<>();
+    // Haastajalista muistissa GP:tä kohti (ei DB:hen)
+    private final Map<Long, List<Keilaaja>> haastajalistaByGp = new HashMap<>();
 
-    public KuppiksenKunkkuService(KuppiksenKunkkuRepository kuppiksenKunkkuRepository,
-                                  TulosRepository tulosRepository,
-                                  KeilaajaKausiRepository keilaajaKausiRepository) {
-        this.kuppiksenKunkkuRepository = kuppiksenKunkkuRepository;
-        this.tulosRepository = tulosRepository;
-        this.keilaajaKausiRepository = keilaajaKausiRepository;
+    public KuppiksenKunkkuService(KuppiksenKunkkuRepository kkRepo,
+                                  TulosRepository tulosRepo,
+                                  KeilaajaKausiRepository kkSeasonRepo) {
+        this.kkRepo = kkRepo;
+        this.tulosRepo = tulosRepo;
+        this.kkSeasonRepo = kkSeasonRepo;
     }
 
     @Transactional
     public void kasitteleKuppiksenKunkku(GP gp, KuppiksenKunkku edellinen, boolean vyoUnohtui) {
-        // 1) Kerää osallistuneet
-        final List<Tulos> osallistuneet = gp.getTulokset() == null
-                ? List.of()
-                : gp.getTulokset().stream().filter(Tulos::getOsallistui).toList();
-        if (osallistuneet.isEmpty()) {
-            return; // ei ottelua
-        }
+        // Osallistujat (vain paikalla olleet NYKYISESSÄ GP:ssä) — haetaan repositorysta
+        List<Tulos> osallistuneet = tulosRepo.findByGp(gp).stream()
+                .filter(Tulos::getOsallistui)
+                .toList();
+        if (osallistuneet.isEmpty()) return;
 
-        // 2) Muodosta haastajalista ja poista duplikaatit säilyttäen järjestys
-        List<Keilaaja> jarjestetty = muodostaHaastajalista(osallistuneet);
-        jarjestetty = poistaDuplikaatitSailyttaenJarjestys(jarjestetty);
-        if (jarjestetty.isEmpty()) return;
-        haastajalistatByGpId.put(gp.getGpId(), jarjestetty);
+        log.debug("=== KK START GP#{} (pvm={}) ===", gp.getJarjestysnumero(), gp.getPvm());
+        log.debug("vyöUnohtui = {}", vyoUnohtui);
 
-        // 3) Valitse puolustaja ja haastaja
-        final Keilaaja puolustaja;
-        Keilaaja haastaja;
-
-        log.debug("=== Kuppiksen Kunkku GP#{} ===", gp.getJarjestysnumero());
-        log.debug("Haastajalista (järjestetty): {}",
-                jarjestetty.stream()
-                        .map(k -> k.getKeilaajaId() + ":" + k.getEtunimi() + " " + k.getSukunimi())
-                        .collect(Collectors.toList()));
-        log.debug("Edellinen hallitseva: {}",
-                (edellinen == null)
-                        ? "ei edellistä"
-                        : (edellinen.getHallitseva().getKeilaajaId() + ":" + edellinen.getHallitseva().getEtunimi()));
-        log.debug("Vyö unohtui: {}", vyoUnohtui);
+        // 1) Selvitä puolustaja tälle GP:lle JA rakenna haastajalista oikeasta lähteestä
+        Keilaaja puolustaja;
+        List<Keilaaja> haastajalistaForThisGp;
+        GP listanLahdeGp; // lokitusta varten
 
         if (edellinen == null || gp.getJarjestysnumero() == 1) {
-            // Kauden ensimmäinen GP: listan #1 puolustaa, seuraava paikalla oleva haastaa
-            puolustaja = jarjestetty.get(0);
-            haastaja = etsiSeuraavaPaikallaOleva(osallistuneet, jarjestetty, Set.of(puolustaja.getKeilaajaId()));
+            // Kauden eka GP: puolustaja = tämän GP:n rankingin ykkönen
+            List<Tulos> tuloksetTamaGp = tulosRepo.findByGp(gp);
+            List<Keilaaja> rankThisGp = muodostaHaastajalistaTuloksista(tuloksetTamaGp, null);
+            if (rankThisGp.isEmpty()) return;
+            puolustaja = rankThisGp.get(0);
+            // Haastajalista UI:lle = ilman puolustajaa
+            haastajalistaForThisGp = rankThisGp.stream().skip(1).toList();
+            listanLahdeGp = gp;
         } else {
-            final Keilaaja edellinenVoittaja = edellinen.getHallitseva();
-            final Long edId = edellinenVoittaja != null ? edellinenVoittaja.getKeilaajaId() : null;
-            final boolean edellinenPaikalla = onPaikalla(osallistuneet, edId);
-
-            if (edellinenPaikalla && !vyoUnohtui) {
-                // Normaalitilanne: edellinen voittaja puolustaa
-                puolustaja = edellinenVoittaja;
-                haastaja = etsiSeuraavaPaikallaOleva(osallistuneet, jarjestetty, Set.of(edId));
-            } else {
-                // Puolustaja poissa TAI vyö unohtui -> puolustusoikeus siirtyy yksi pykälä alas
-                // Uusi puolustaja = ensimmäinen paikalla oleva, joka ei ole edellinen voittaja
-                puolustaja = etsiSeuraavaPaikallaOleva(osallistuneet, jarjestetty,
-                        (edId == null) ? Set.of() : Set.of(edId));
-                // Uusi haastaja = seuraava paikalla oleva, joka ei ole (edellinen) eikä uusi puolustaja
-                Set<Long> exclude = new HashSet<>();
-                if (edId != null) exclude.add(edId);
-                if (puolustaja != null && puolustaja.getKeilaajaId() != null) {
-                    exclude.add(puolustaja.getKeilaajaId());
-                }
-                haastaja = etsiSeuraavaPaikallaOleva(osallistuneet, jarjestetty, exclude);
+            // Normaalit GP:t: puolustaja = edellisen KK:n voittaja (fallback: edellisen KK:n puolustaja)
+            Keilaaja edVoittaja = edellinen.getVoittaja();
+            if (edVoittaja == null) {
+                edVoittaja = edellinen.getPuolustaja();
             }
+            puolustaja = edVoittaja;
+
+            // Haastajalista GPₙ:lle muodostetaan GPₙ₋₁:n tuloksista ja poistetaan puolustaja
+            GP edellinenGp = edellinen.getGp();
+            List<Tulos> tuloksetEdellisesta = tulosRepo.findByGp(edellinenGp);
+            haastajalistaForThisGp = muodostaHaastajalistaTuloksista(tuloksetEdellisesta, puolustaja);
+            listanLahdeGp = edellinenGp;
         }
 
-        // Turvavyö: älä koskaan pelaa itseäsi vastaan
-        if (haastaja != null && Objects.equals(haastaja.getKeilaajaId(), puolustaja.getKeilaajaId())) {
-            haastaja = etsiSeuraavaPaikallaOleva(osallistuneet, jarjestetty, Set.of(puolustaja.getKeilaajaId()));
-        }
+        // Talleta UI:lle näytettävä lista (ei sisällä puolustajaa)
+        haastajalistaByGp.put(gp.getGpId(), haastajalistaForThisGp);
 
-        log.debug("Valittu puolustaja: {}",
-                puolustaja == null ? "null" : puolustaja.getKeilaajaId() + ":" + puolustaja.getEtunimi());
-        log.debug("Valittu haastaja: {}",
-                haastaja == null ? "null" : haastaja.getKeilaajaId() + ":" + haastaja.getEtunimi());
+        // Debug: näytä haastajalista, jossa sarjat tulevat listan lähde-GP:stä
+        log.debug("Haastajalista GP#{} (lähde={} -> ilman puolustajaa): {}",
+                gp.getJarjestysnumero(),
+                (listanLahdeGp == gp ? "tämä GP" : "edellinen GP"),
+                formatHaastajalista(listanLahdeGp, haastajalistaForThisGp));
 
-        // 4) Ratkaise ottelu
-        final Keilaaja voittaja;
-        if (haastaja == null) {
-            // Vain yksi osallistuja -> “walkover”
-            voittaja = puolustaja;
+        // 2) Valitse lopullinen puolustaja & haastaja NYKYISEEN GP:hen läsnäolot huomioiden
+        Keilaaja haastaja;
+        boolean puolustajaPaikalla = onPaikalla(osallistuneet, puolustaja);
+        if (puolustajaPaikalla && !vyoUnohtui) {
+            // puolustaja pysyy -> haastajaksi listan kärjestä ensimmäinen paikalla oleva
+            haastaja = etsiSeuraavaPaikallaOleva(osallistuneet, haastajalistaForThisGp, null);
         } else {
-            // Diagnoosi: tulosarvot ennen ratkaisua
-            var tP = tulosRepository.findByGpAndKeilaaja(gp, puolustaja);
-            var tH = tulosRepository.findByGpAndKeilaaja(gp, haastaja);
-            int pP = Math.max(nullSafe(tP.getSarja1()), nullSafe(tP.getSarja2()));
-            int hP = Math.min(nullSafe(tP.getSarja1()), nullSafe(tP.getSarja2()));
-            int pH = Math.max(nullSafe(tH.getSarja1()), nullSafe(tH.getSarja2()));
-            int hH = Math.min(nullSafe(tH.getSarja1()), nullSafe(tH.getSarja2()));
-            log.debug("Ottelu: puolustaja {} (paras {}, huonompi {}) vs haastaja {} (paras {}, huonompi {})",
-                    puolustaja.getKeilaajaId(), pP, hP, haastaja.getKeilaajaId(), pH, hH);
+            // puolustaja vaihtuu -> uusi puolustaja = listan 1. paikalla oleva
+            Keilaaja uusiPuolustaja = etsiSeuraavaPaikallaOleva(osallistuneet, haastajalistaForThisGp, null);
+            // haastajaksi seuraava paikalla oleva ≠ uusi puolustaja
+            Keilaaja uusiHaastaja = etsiSeuraavaPaikallaOleva(osallistuneet, haastajalistaForThisGp, uusiPuolustaja);
+            puolustaja = uusiPuolustaja;
+            haastaja = uusiHaastaja;
+        }
 
+        // Debuggaus (sarjat nykyisestä GP:stä, koska ottelu pelataan tässä GP:ssä)
+        log.debug("Valittu puolustaja: {} ({})", n(puolustaja), sarjatFor(gp, puolustaja));
+        log.debug("Valittu haastaja  : {} ({})", n(haastaja), sarjatFor(gp, haastaja));
+
+        // 3) Ratkaise ottelu → VOITTAJA
+        Keilaaja voittaja;
+        if (haastaja == null) {
+            voittaja = puolustaja; // vain yksi kelvollinen pelaaja
+        } else {
             voittaja = ratkaiseOttelu(gp, puolustaja, haastaja);
         }
 
-        // 5) Talleta rivi ja +1 piste voittajalle
-        lisaaKaksintaistelu(gp, voittaja, haastaja, vyoUnohtui);
-        lisaaYksiSarjataulukkoPiste(voittaja, gp);
+        // Debuggaus
+        log.debug("VOITTAJA: {} ({})", n(voittaja), sarjatFor(gp, voittaja));
+
+        // 4) Tallenna yksi rivi: puolustaja, haastaja, voittaja, vyöUnohtui
+        tallennaKkRivi(gp, puolustaja, haastaja, voittaja, vyoUnohtui);
+
+        // 5) +1 piste voittajalle
+        lisaaYksiPisteSarjataulukkoon(voittaja, gp);
+
+        // Debuggaus
+        log.debug("Persistoitu KK (gpId={}, puolustaja={}, haastaja={}, voittaja={}, vyöUnohtui={})",
+                gp.getGpId(), n(puolustaja), n(haastaja), n(voittaja), vyoUnohtui);
+        log.debug("=== KK END   GP#{} ===", gp.getJarjestysnumero());
+    }
+
+    // ---------- apurit ----------
+
+    /**
+     * Rakentaa järjestetyn haastajalistan annetun GP:n tuloksista (haetaan repositorysta).
+     * Järjestys: paras DESC, huonompi DESC, keilaajaId ASC.
+     * Jos exclude != null, poistetaan hänet listalta (esim. puolustaja).
+     */
+    private List<Keilaaja> muodostaHaastajalistaGpsta(GP gp, Keilaaja exclude) {
+        List<Tulos> tulokset = tulosRepo.findByGp(gp);
+        return muodostaHaastajalistaTuloksista(tulokset, exclude);
     }
 
     /**
-     * Haastajalista järjestyksessä:
-     * 1) paras sarja DESC
-     * 2) huonompi sarja DESC
-     * 3) keilaajaId ASC (determinismi)
+     * Yleismuotoinen rakentaja: tee ranking annetusta tuloslistasta.
      */
-    List<Keilaaja> muodostaHaastajalista(List<Tulos> osallistuneet) {
+    private List<Keilaaja> muodostaHaastajalistaTuloksista(List<Tulos> tulokset, Keilaaja exclude) {
+        if (tulokset == null) return List.of();
         record R(Keilaaja k, int paras, int huonompi, Long id) {}
-        return osallistuneet.stream()
-                .map(t -> new R(
-                        t.getKeilaaja(),
-                        Math.max(nullSafe(t.getSarja1()), nullSafe(t.getSarja2())),
-                        Math.min(nullSafe(t.getSarja1()), nullSafe(t.getSarja2())),
-                        t.getKeilaaja() != null ? t.getKeilaaja().getKeilaajaId() : null
-                ))
-                .sorted((a, b) -> {
-                    int cmp = Integer.compare(b.paras, a.paras);
-                    if (cmp != 0) return cmp;
-                    cmp = Integer.compare(b.huonompi, a.huonompi);
-                    if (cmp != 0) return cmp;
-                    // determinismi: pienin ID ensin (nullit lopuksi)
-                    if (a.id == null && b.id == null) return 0;
-                    if (a.id == null) return 1;
-                    if (b.id == null) return -1;
-                    return Long.compare(a.id, b.id);
-                })
-                .map(R::k)
-                .collect(Collectors.toList());
+        return tulokset.stream()
+            .filter(Objects::nonNull)
+            .filter(Tulos::getOsallistui)
+            .map(t -> new R(
+                    t.getKeilaaja(),
+                    Math.max(nullSafe(t.getSarja1()), nullSafe(t.getSarja2())),
+                    Math.min(nullSafe(t.getSarja1()), nullSafe(t.getSarja2())),
+                    t.getKeilaaja().getKeilaajaId()))
+            .sorted((a,b) -> {
+                int cmp = Integer.compare(b.paras, a.paras);
+                if (cmp != 0) return cmp;
+                cmp = Integer.compare(b.huonompi, a.huonompi);
+                if (cmp != 0) return cmp;
+                return Long.compare(a.id, b.id);
+            })
+            .map(R::k)
+            .filter(k -> exclude == null || !k.equals(exclude))
+            .toList();
     }
 
-    /**
-     * Poistaa duplikaatit säilyttäen järjestyksen. Vertailu keilaajaId:llä.
-     */
-    List<Keilaaja> poistaDuplikaatitSailyttaenJarjestys(List<Keilaaja> lista) {
-        List<Keilaaja> uniikit = new ArrayList<>();
-        Set<Long> seen = new HashSet<>();
-        for (Keilaaja k : lista) {
-            Long id = (k != null) ? k.getKeilaajaId() : null;
-            if (id == null || seen.add(id)) {
-                uniikit.add(k);
-            }
-        }
-        return uniikit;
-    }
+    private Keilaaja ratkaiseOttelu(GP gp, Keilaaja k1, Keilaaja k2) {
+        Tulos t1 = tulosRepo.findByGpAndKeilaaja(gp, k1);
+        Tulos t2 = tulosRepo.findByGpAndKeilaaja(gp, k2);
+        if (t1 == null || t2 == null)
+            throw new IllegalStateException("Tulokset puuttuvat.");
 
-    /**
-     * Ratkaisee ottelun:
-     * - Ensin paras sarja DESC
-     * - Sitten huonompi sarja DESC
-     * - Täydellinen tasapeli -> IllegalStateException
-     */
-    Keilaaja ratkaiseOttelu(GP gp, Keilaaja k1, Keilaaja k2) {
-        Tulos t1 = tulosRepository.findByGpAndKeilaaja(gp, k1);
-        Tulos t2 = tulosRepository.findByGpAndKeilaaja(gp, k2);
-        if (t1 == null || t2 == null) {
-            throw new IllegalStateException("Ottelun ratkaisu epäonnistui: tulos puuttuu.");
-        }
-
-        int p1 = Math.max(nullSafe(t1.getSarja1()), nullSafe(t1.getSarja2()));
-        int p2 = Math.max(nullSafe(t2.getSarja1()), nullSafe(t2.getSarja2()));
+        int p1 = Math.max(ns(t1.getSarja1()), ns(t1.getSarja2()));
+        int p2 = Math.max(ns(t2.getSarja1()), ns(t2.getSarja2()));
         if (p1 != p2) return p1 > p2 ? k1 : k2;
 
-        int h1 = Math.min(nullSafe(t1.getSarja1()), nullSafe(t1.getSarja2()));
-        int h2 = Math.min(nullSafe(t2.getSarja1()), nullSafe(t2.getSarja2()));
+        int h1 = Math.min(ns(t1.getSarja1()), ns(t1.getSarja2()));
+        int h2 = Math.min(ns(t2.getSarja1()), ns(t2.getSarja2()));
         if (h1 != h2) return h1 > h2 ? k1 : k2;
 
+        // Täydellinen tasapeli → UI valitsee voittajan (kaadot/paikat puuttuvat)
         throw new IllegalStateException("Täydellinen tasapeli – valitse voittaja käyttöliittymässä.");
     }
 
-    /**
-     * Palauttaa listalta ensimmäisen paikalla olevan keilaajan, jota ei ole excludeIds-joukossa.
-     */
-    Keilaaja etsiSeuraavaPaikallaOleva(List<Tulos> osallistuneet, List<Keilaaja> jarjestetty, Set<Long> excludeIds) {
-        for (Keilaaja k : jarjestetty) {
-            if (k == null || k.getKeilaajaId() == null) continue;
-            Long id = k.getKeilaajaId();
-            if (excludeIds != null && excludeIds.contains(id)) continue;
-            if (onPaikalla(osallistuneet, id)) return k;
-        }
-        return null;
+    private Keilaaja etsiSeuraavaPaikallaOleva(List<Tulos> osallistuneet,
+                                               List<Keilaaja> jarjestys,
+                                               Keilaaja pois) {
+        return jarjestys.stream()
+                .filter(k -> pois == null || !k.equals(pois))
+                .filter(k -> onPaikalla(osallistuneet, k))
+                .findFirst().orElse(null);
     }
 
-    /**
-     * Onko annettu keilaajaId paikalla tämän GP:n tuloksissa.
-     */
-    boolean onPaikalla(List<Tulos> osallistuneet, Long keilaajaId) {
-        if (keilaajaId == null) return false;
-        for (Tulos t : osallistuneet) {
-            Keilaaja k = t.getKeilaaja();
-            if (k != null && Objects.equals(k.getKeilaajaId(), keilaajaId)) {
-                return true;
-            }
-        }
-        return false;
+    private boolean onPaikalla(List<Tulos> osallistuneet, Keilaaja k) {
+        return osallistuneet.stream().anyMatch(t -> t.getKeilaaja().equals(k));
     }
 
-    private int nullSafe(Integer val) {
-        return val == null ? 0 : val;
+    private int ns(Integer v) {
+        return v == null ? 0 : v;
     }
 
-    void lisaaKaksintaistelu(GP gp, Keilaaja voittaja, Keilaaja haastaja, boolean vyoUnohtui) {
+    private void tallennaKkRivi(GP gp, Keilaaja puolustaja, Keilaaja haastaja,
+                                Keilaaja voittaja, boolean vyoUnohtui) {
         KuppiksenKunkku kk = new KuppiksenKunkku();
         kk.setGp(gp);
-        kk.setHallitseva(voittaja);
+        kk.setPuolustaja(puolustaja);
         kk.setHaastaja(haastaja);
+        kk.setVoittaja(voittaja);
         kk.setVyoUnohtui(vyoUnohtui);
-        kuppiksenKunkkuRepository.save(kk);
-        kaudenKaksintaistelut.add(kk);
+        kkRepo.save(kk);
     }
 
-    void lisaaYksiSarjataulukkoPiste(Keilaaja voittaja, GP gp) {
+    private void lisaaYksiPisteSarjataulukkoon(Keilaaja voittaja, GP gp) {
         if (voittaja == null || gp == null || gp.getKausi() == null) return;
-        Optional<KeilaajaKausi> kkOpt = keilaajaKausiRepository.findByKeilaajaAndKausi(voittaja, gp.getKausi());
-        kkOpt.ifPresent(kk -> {
+        kkSeasonRepo.findByKeilaajaAndKausi(voittaja, gp.getKausi()).ifPresent(kk -> {
             kk.setKaudenPisteet(kk.getKaudenPisteet() + 1.0);
-            keilaajaKausiRepository.save(kk);
+            kkSeasonRepo.save(kk);
         });
     }
 
-    // --------- Getterit Thymeleafia/testejä varten ---------
-
-    public List<KuppiksenKunkku> getKaudenKaksintaistelut() {
-        return Collections.unmodifiableList(kaudenKaksintaistelut);
+    // Julkinen getter UI:lle / testeille, ei DB-kirjoitusta
+    public List<Keilaaja> getHaastajalista(GP gp) {
+        return haastajalistaByGp.getOrDefault(gp.getGpId(), List.of());
     }
 
-    public List<Keilaaja> getHaastajalista(GP gp) {
-        return haastajalistatByGpId.getOrDefault(gp.getGpId(), Collections.emptyList());
+    // --- DEBUG/APU: nimet ja sarjat lokitusta varten ---
+
+    /** Palauttaa turvallisesti nimen: "id:Etunimi Sukunimi" tai "null". */
+    private String n(Keilaaja k) {
+        return (k == null) ? "null" : (k.getKeilaajaId() + ":" + k.getEtunimi() + " " + k.getSukunimi());
+    }
+
+    /** Palauttaa "paras XXX, huonompi YYY" annetulle keilaajalle tästä GP:stä. */
+    private String sarjatFor(GP gp, Keilaaja k) {
+        if (gp == null || k == null) return "—";
+        Tulos t = tulosRepo.findByGpAndKeilaaja(gp, k);
+        if (t == null) return "—";
+        int s1 = nullSafe(t.getSarja1());
+        int s2 = nullSafe(t.getSarja2());
+        int paras = Math.max(s1, s2);
+        int huonompi = Math.min(s1, s2);
+        return "paras " + paras + ", huonompi " + huonompi;
+    }
+
+    /** Muotoilee haastajalistan lokiin tyyliin: [id:Nimi (paras,huonompi), ...]. */
+    private String formatHaastajalista(GP gp, List<Keilaaja> lista) {
+        if (lista == null || lista.isEmpty()) return "[]";
+        List<String> parts = new ArrayList<>();
+        for (Keilaaja k : lista) {
+            String sj = sarjatFor(gp, k);
+            parts.add(k.getKeilaajaId() + ":" + k.getEtunimi() + " " + k.getSukunimi() + " (" + sj + ")");
+        }
+        return parts.toString();
+    }
+
+    /** Null-suojattu Integer -> int (null => 0). */
+    private int nullSafe(Integer val) {
+        return val == null ? 0 : val;
     }
 }
